# cnn_research

./: .gitignore  .pre-commit-config.yaml  README.md  jupytext.toml  pyproject.toml
notebooks/: 01_mnist_exploration.py  02_simple_nn.py  03_simple_cnn.py  04_saliency_map.py
src/models/: complex_cnn_train.yaml  simple2_cnn_train.yaml  simple_cnn.yaml  standard_cnn.yaml  standard_cnn_train.yaml
src/rcnn/: datasets.py  factory.py  predictions.py  visualization.py
